cmake_minimum_required(VERSION 3.19)
project(study_responsibility_patterns-singleton)
project(study_responsibility_patterns-proxy)

set(CMAKE_CXX_STANDARD 17)

add_executable(study_responsibility_patterns-singleton study-singleton-pattern.cpp)
add_executable(study_responsibility_patterns-proxy study-proxy-pattern.cpp)